Fix the z-index for the info modal

--- a/app/assets/stylesheets/records.sass
+++ b/app/assets/stylesheets/records.sass
@@ -125,4 +125,4 @@ i
     position: absolute
     right: 15px
     top: 9px
-    z-index: 99
+    z-index: 4
